5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1692_1880.log
== SUBMITION (2019-05-02 13:40:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero m: "))

if(1 <= m <= 12 and m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco"):
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")

-- EXECUTION TIME:
0.166749
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 9
    print("marco"):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:40:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero m: "))

if(1 <= m <= 12 and m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco"):
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- EXECUTION TIME:
0.15432
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 9
    print("marco"):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:40:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero m: "))

if(1 <= m and m <= 12 and m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco"):
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- EXECUTION TIME:
0.306188
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 9
    print("marco"):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:45:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero m: "))

if(1 <= m and m <= 12 and m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco"):
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- ERROR:
File "XXXX", line 9
    print("marco"):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:45:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um numero m: "))

if(1 <= m and m <= 12 and m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")

-- EXECUTION TIME:
0.142941
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
